force-app/segments/main/default/objects/Demo_Segment_Membership__c/Demo_Segment_Membership__c.object-meta.xml
<CustomObject>
    <label>Segment Membership</label>
    <nameField>
        <displayFormat>SM-{00000000}</displayFormat>
        <label>Membership ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segment Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>