force-app/segments/main/default/objects/Demo_Segment_Membership__c/fields/Individual__c.field-meta.xml
<CustomField>
    <fullName>Individual__c</fullName>
    <label>Individual</label>
    <referenceTo>Demo_DMO_Individual__c</referenceTo>
    <relationshipLabel>Segment Memberships</relationshipLabel>
    <relationshipName>Segment_Memberships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>