force-app/segments/main/default/objects/Demo_Segment_Membership__c/fields/Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date__c</fullName>
    <label>Qualified Date</label>
    <type>DateTime</type>
</CustomField>